--- a/app/src/main/res/layout/fragment_absent.xml
+++ b/app/src/main/res/layout/fragment_absent.xml
@@ -5,10 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".views.AbsentFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_all_absent"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="match_parent"/>
 
 </FrameLayout>
