IMproving remove function

--- a/app/src/main/res/layout/row_guest_list.xml
+++ b/app/src/main/res/layout/row_guest_list.xml
@@ -2,12 +2,20 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
     <TextView
         android:id="@+id/text_name"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="name"/>
+        android:text="name"
+        android:layout_weight="7"/>
+
+    <ImageView
+        android:id="@+id/image_remove"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_menu_camera"
+        android:layout_weight="1"/>
 
 </LinearLayout>
