Adding information of document

--- a/app/src/main/res/layout/activity_guest_form.xml
+++ b/app/src/main/res/layout/activity_guest_form.xml
@@ -16,6 +16,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/document"/>
+
+    <EditText
+        android:id="@+id/edit_document"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <RadioGroup
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
