--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,4 +17,16 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
+    <style name="textLabel" parent="@android:style/TextApperance">
+        <item name="android:textAllCaps">true</item>
+        <item name="android:textColor">@color/colorPrimaryText</item>
+        <item name="android:textSize">12sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="textEdit" parent="@android:style/TextApperance">
+        <item name="textColor">@color/colorPrimaryText</item>
+        <item name="textSize">20sp</item>
+    </style>
+
 </resources>
