--- a/app/src/main/res/layout/activity_guest_form.xml
+++ b/app/src/main/res/layout/activity_guest_form.xml
@@ -8,27 +8,37 @@
     tools:context=".views.GuestFormActivity">
 
     <TextView
-        style="@style/textLabel"
+        android:textAllCaps="true"
+        android:textColor="@color/colorPrimaryText"
+        android:textSize="12sp"
+        style="bold"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/nome"/>
+        android:text="@string/nome" />
     
     <EditText
         android:id="@+id/edit_name"
-        style="@style/textEdit"
+        android:textColor="@color/colorPrimaryText"
+        android:textSize="20sp"
+        android:hint="@string/eloa_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPersonName" />
 
     <TextView
-        style="@style/textLabel"
+        android:textAllCaps="true"
+        android:textColor="@color/colorPrimaryText"
+        android:textSize="12sp"
+        style="bold"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/document"/>
 
     <EditText
         android:id="@+id/edit_document"
-        style="@style/textEdit"
+        android:textColor="@color/colorPrimaryText"
+        android:textSize="20sp"
+        android:hint="@string/cpf"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAllCaps="true"/>
@@ -36,7 +46,10 @@
  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
-     style="@style/textLabel"
+     android:textAllCaps="true"
+     android:textColor="@color/colorPrimaryText"
+     android:textSize="12sp"
+     style="bold"
      android:layout_marginTop="30dp"
      android:text="@string/confirmation"/>
 
