--- a/app/src/main/res/layout/fragment_all_invited.xml
+++ b/app/src/main/res/layout/fragment_all_invited.xml
@@ -9,7 +9,8 @@
         android:id="@+id/linear_dashboard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -20,19 +21,31 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/presentes"/>
+                android:gravity="center"
+                android:text="@string/presentes"
+                android:textColor="@color/colorTextPresent"
+                android:textSize="15sp"
+                android:textStyle="bold"/>
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/ausentes"/>
+                android:gravity="center"
+                android:text="@string/ausentes"
+                android:textColor="@color/colorTextAbsent"
+                android:textSize="15sp"
+                android:textStyle="bold"/>
 
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/total"/>
+                android:gravity="center"
+                android:text="@string/total"
+                android:textColor="@color/colorTextTotal"
+                android:textSize="15sp"
+                android:textStyle="bold"/>
             
         </LinearLayout>
 
@@ -46,32 +59,50 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/presentes"/>
+                android:gravity="center"
+                android:text="@string/presentes"
+                android:textColor="@color/colorTextPresent"
+                android:textSize="25sp"
+                android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/text_absent_count"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/ausentes"/>
+                android:gravity="center"
+                android:text="@string/ausentes"
+                android:textColor="@color/colorTextAbsent"
+                android:textSize="25sp"
+                android:textStyle="bold"/>
 
             <TextView
                 android:id="@+id/text_all_invited"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/total"/>
+                android:gravity="center"
+                android:text="@string/total"
+                android:textColor="@color/colorTextTotal"
+                android:textSize="25sp"
+                android:textStyle="bold"/>
 
         </LinearLayout>
 
-
-
     </LinearLayout>
+
+    <View
+        android:id="@+id/view_divided"
+        android:layout_below="@id/linear_dashboard"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_margin="10dp"
+        android:background="@color/colorPrimary"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_all_invited"
-        android:layout_below="@+id/linear_dashboard"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_below="@id/view_divided"/>
 
 </RelativeLayout>
