--- a/app/src/main/res/layout/row_guest_list.xml
+++ b/app/src/main/res/layout/row_guest_list.xml
@@ -8,14 +8,21 @@
         android:id="@+id/text_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_weight="7"
+        android:padding="20dp"
         android:text="name"
-        android:layout_weight="7"/>
+        android:textColor="@color/colorPrimaryText"
+        android:textSize="15sp"/>
 
     <ImageView
         android:id="@+id/image_remove"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_menu_camera"
-        android:layout_weight="1"/>
+        android:layout_height="60dp"
+        android:layout_gravity="right"
+        android:layout_marginEnd="20dp"
+        android:layout_weight="1"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
+        android:src="@drawable/remove"/>
 
 </LinearLayout>
