--- a/app/src/main/res/layout/activity_guest_form.xml
+++ b/app/src/main/res/layout/activity_guest_form.xml
@@ -39,6 +39,7 @@
         android:textColor="@color/colorPrimaryText"
         android:textSize="20sp"
         android:hint="@string/cpf"
+        android:inputType="number"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAllCaps="true"/>
